--- a/project.html
+++ b/project.html
@@ -37,7 +37,7 @@
 
             </ul>
             <div class="SF-main">
-                <image src="../static/smartfactory.png"></image>
+                <image src="static/smartfactory.png"></image>
                 <p>스마트 팩토리는 공장에 자동화와 자율화를 더하여 제품 기획·개발부터 양산까지, 주문에서부터 완제품 출하까지 제조 관련 모든 과정을 말합니다. 응용 시스템뿐 아니라 현장자동화와 제어자동화 영역까지 공장 운영의 모든 부분을 포함하는 것이다.</p>
             </div>
         </div>
@@ -45,7 +45,7 @@
     <section class="SFeffects">
         <div class="container">
             <h2>스마트 팩토리 효과</h2>
-            <image src="../static/benefits.png"></image>
+            <image src="static/benefits.png"></image>
         </div>
 
     </section>
