--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="navbar">
         <div class="container">
             <a class="logo" href="index.html">PingPongFlow</a>
-            <img src="../static/symbol.png" alt="symbol">
+            <img src="static/symbol.png" alt="symbol">
 
             <nav>
                 <ul class="primary-nav">
