--- a/SFbasic.html
+++ b/SFbasic.html
@@ -55,8 +55,8 @@
                 <image src="static/part2-1.png"></image>
             </div>
             <div class="set">
-                <image src="../static/part3.png"></image>
-                <image src="../static/part3-1.png"></image>
+                <image src="static/part3.png"></image>
+                <image src="static/part3-1.png"></image>
             </div>
         </div>
 
