--- a/lessons.html
+++ b/lessons.html
@@ -51,6 +51,7 @@
             <div class="lessonGallery">
                 <div class="item" kit="G3" level="basic" content="car"><img src="static/antcar.png" alt=""></div>
                 <div class="item" kit="G2" level="basic"content="car"><img src="static/autocar.png" alt=""></div>
+                <div class="item" kit="G2" level="advance"content="ai"><img src="static/aicam.png" alt=""></div>
                 <div class="item" kit="G3" level="basic" content="car"><img src="static/battlebot.png" alt=""></div>
                 <div class="item" kit="G6" level="intermediate" content="car"><img src="static/bipedbot.png" alt=""></div>
                 <div class="item" kit="G4" level="basic" content="car"><img src="static/bridgebot.png" alt=""></div>
