add lesson page, eye image, fix smartfactory nav

--- a/lessons.html
+++ b/lessons.html
@@ -49,7 +49,7 @@
             </div>
         
             <div class="lessonGallery">
-                <div class="item" kit="G3" level="basic" content="car"><img src="static/antcar.png" alt=""></div>
+                <a class="item" kit="G3" level="basic" content="car" href="lessonpage.html"><img src="static/antcar.png" alt=""></a>
                 <div class="item" kit="G2" level="basic"content="car"><img src="static/autocar.png" alt=""></div>
                 <div class="item" kit="G2" level="advance"content="ai"><img src="static/aicam.png" alt=""></div>
                 <div class="item" kit="G3" level="basic" content="car"><img src="static/battlebot.png" alt=""></div>
