--- a/index.html
+++ b/index.html
@@ -15,15 +15,25 @@
 
             <nav>
                 <ul class="primary-nav">
-                    <li><a href="#">시작하기</a></li>
+                    <li><a href="start.html">시작하기</a></li>
                     <li><a href="lessons.html">핑퐁수업</a></li>
                     <li><a href="project.html">프로젝트</a></li>
-                    <li><a href="#">질문핑퐁</a></li>
+                    <li><a href="qna.html">질문핑퐁</a></li>
                 </ul>
             </nav>
         
         </div>
     </div>
+    <section class="bottom">
+        <div class="container">
+            <div class="text1">
+                <h3 href="http://roborisen.com/company/kids.php">Roborisen</h3>
+                <p>RoboRisen Co., Ltd. 4th floor, HyungWoo Bldg. 28 UnNam 9 Gil, SeochoGu Seoul South Korea. 06777 Robot PingPong Inc. 1933 South Broadway, Suite 1100, Los Angeles, CA 90007
+                    T : +82-2-6956-2237 E : qna@roborisen.com</p>
+                
+            </div>
+        </div>
+    </section>
 </body>
 
 
