add antcar, add code

--- a/SFbasic.html
+++ b/SFbasic.html
@@ -88,7 +88,16 @@
             <div class="codeBox">
                 <div class="codetitle">
                     <h3>경로인식 ANT BOT</h3></div>
-                <div class="code"></div>
+                <div class="code">
+                    <img src="static/code1.png" alt="">
+                </div>
+            </div>
+            <div class="codeBox">
+                <div class="codetitle">
+                    <h3> 상자인식 분류 밸트</h3></div>
+                <div class="code">
+                    <img src="static/code2.png" alt="">
+                </div>
             </div>
         </div>
     </section>
