--- a/project.html
+++ b/project.html
@@ -71,6 +71,10 @@
             </div></div> -->
         </div>
     </section>
+    <div class="container">
+        <a href="SFbasic.html" class="gotobasic"> 초급 스마트팩토리 시작하기 </a>
+    </div>
+
     <section class="bottom">
         <div class="container">
             <div class="text1">
