--- a/project.html
+++ b/project.html
@@ -66,9 +66,7 @@
             <div class="video-container" >
                 <object type="text/html" width="100%" height="500" data="https://www.youtube.com/embed/IMPbKVb8y8s"></object>
             </div>
-            <!-- <div class="video-container" >
-                <object type="text/html" width="100%" height="500" data="https://www.youtube.com//embed/4TV8ojZF0Jk"></object>
-            </div></div> -->
+            <iframe width="100%" height="500" src="https://serviceapi.nmv.naver.com/flash/convertIframeTag.nhn?vid=F192EDAEE05F3ADD39A4B8403EC8C7C9BA1E&outKey=V125b1d10285dfd4c9210928155487839090e44e59cbe406dfa8f928155487839090e" frameborder="no" scrolling="no" title="NaverVideo" allow="autoplay; gyroscope; accelerometer; encrypted-media" allowfullscreen></iframe>
         </div>
     </section>
     <div class="container">
