--- a/SFbasic.html
+++ b/SFbasic.html
@@ -39,18 +39,19 @@
             </ul>
             <div class="SW-main">
                 <image src="static/smartwarehouse.png"></image>
-                <p>스마트 팩토리는 공장에 자동화와 자율화를 더하여 제품 기획·개발부터 양산까지, 주문에서부터 완제품 출하까지 제조 관련 모든 과정을 말합니다. 응용 시스템뿐 아니라 현장자동화와 제어자동화 영역까지 공장 운영의 모든 부분을 포함하는 것이다.</p>
+                <p>스마트 물류 공장은 물류의 이동, 분류, 저장와 같은 전반적인 물류 관리를 데이터와 다양한 IT 기술을 접목시켜 효율성을 극대화 시킨 공장입니다. </p>
             </div>
         </div>
     </section>  
     <section class="parts">
         <div class="container">
             <h2>스마트 물류센터 구성</h2>
+            <a href="lessonpage_antcar.html" class="antcar">Ant car 조립하기</a>
             <div class="set">
                 <image src="static/part1.png"></image>
                 <image src="static/part1-1.png"></image>
             </div>
-            <a href="lessonpage_antcar.html" class="antcar">앤트카 조립하기</a>
+            <a href="lessonpage_Robotarm.html" class="robotarm">Robot arm 조립하기</a>
             <div class="set">
                 <image src="static/part2.png"></image>
                 <image src="static/part2-1.png"></image>
@@ -75,10 +76,14 @@
         <div class="container">
             <h2>인공지능 이해하기</h2>
             <p>사람은 눈으로 물건을 인식하고 행동의 판단을 내리는 것 처럼 기계도 카메라를 통해서 물체를 인식 할 수 있는 기술을 ‘이미지 인식(Image Recognition)'이라고 합니다. 이 기술은 자율주행 자동차, 안면 인식, 엑스레이 사진 분석에 활용되고 있습니다. </p>
-            <img src="static/eye.png" alt="aieye">
+           
             <p>이미지 인식을 위해 어떤 물체를 판단하는지 종류를 나누는 ‘분류(Classification)'를 진행해야합니다. 이를 위해서는 학습할 수 있는 물체 사진들이 필요합니다.    </p>
+            <img src="static/eye.png" alt="aieye">
             <img class="cnn" src="static/CNN.png" alt="cnn">
-            <p>이미지 인식 기술이 더 활발히 사용될 수 있었던 계기에는 합성곱 신경망 (CNN, Convolutional Neural Network) 이 큰 역활을 했습니다. CNN은 이미지, 비디오, 오디오 등을 분류하는 딥러닝에 사용되는 알고리즘이</p>
+            <p>이미지 인식 기술이 더 활발히 사용될 수 있었던 계기에는 합성곱 신경망 (CNN, Convolutional Neural Network) 이 큰 역활을 했습니다. CNN은 이미지, 비디오, 오디오 등을 분류하는 딥러닝에 사용되는 알고리즘이 이미지에서 얼굴, 객체 등을 인식하는 패턴을 찾는 데 유용합니다. 특징을 학습하거나 기존 네트워크를 기반으로 CNN을 재학습하고 새로운 이미지 인식하도록 만들 수 있는 장점이 있습니다.
+            </p>
+            <p>알고리즘이 물체를 인식할 수 있도록 학습할 이미지 데이터를 제공하고 이를 바탕으로 인공지능 알고리즘은 사라의 도움 없이 물체를 인식하고 판단을 할수 있게 됩니다. 
+            </p>
 
         </div>
     </section>
