--- a/qna.html
+++ b/qna.html
@@ -11,7 +11,7 @@
 
     <div class="navbar">
         <div class="container">
-            <a class="logo" href="index.html">PingPongFlow</a>
+            <a class="logo" href="#">PingPongFlow</a>
             <img src="static/symbol.png" alt="symbol">
 
             <nav>
@@ -29,17 +29,16 @@
         <div class="container">
             <div class="filterBar">
                 <div class="filtercat">
-                    <div>키트</div>
-                    <div class="tag" filter="G2">G2</div>
-                    <div class="tag" filter="G3">G3</div>
-                    <div class="tag" filter="G4">G4</div>
-                    <div class="tag" filter="G6">G6</div>
+                    <div>코딩</div>
+                    <div class="tag" filter="basic">스크레치</div>
+                    <div class="tag" filter="intermediate">파이썬</div>
+                    <div class="tag"filter="advance">인공지능</div>
                 </div>
                 <div class="filtercat">
-                    <div>레벨</div>
-                    <div class="tag" filter="basic">초급</div>
-                    <div class="tag" filter="intermediate">중급</div>
-                    <div class="tag"filter="advance">고급</div>
+                    <div>프로젝트</div>
+                    <div class="tag" filter="basic">스마트팩토리</div>
+                    <div class="tag" filter="intermediate">해커톤</div>
+                    <div class="tag"filter="advance">우주탐험대</div>
                 </div>
             </div>
             <img src="static/qnalist.png" alt="">
