--- a/SFbasic.html
+++ b/SFbasic.html
@@ -11,7 +11,7 @@
 
     <div class="navbar">
         <div class="container">
-            <a class="logo" href="index.html">PingPongFlow</a>
+            <a class="logo" href="#">PingPongFlow</a>
             <img src="static/symbol.png" alt="symbol">
 
             <nav>
