--- a/lessonpage_autocar.html
+++ b/lessonpage_autocar.html
@@ -10,8 +10,8 @@
 <body>
     <div class="navbar">
         <div class="container">
-            <a class="logo" href="index.html">PingPongFlow</a>
-            <img src="static/symbol.png" alt="symbol" href="index.html">
+            <a class="logo" href="#">PingPongFlow</a>
+            <img src="static/symbol.png" alt="symbol" href="#">
 
             <nav>
                 <ul class="primary-nav">
