--- a/project.html
+++ b/project.html
@@ -13,7 +13,7 @@
 
         </div>
         <div class="container">
-            <a class="logo" href="index.html">PingPongFlow</a>
+            <a class="logo" href="#">PingPongFlow</a>
             <img src="static/symbol.png" alt="symbol">
 
             <nav>
