--- a/start.html
+++ b/start.html
@@ -12,8 +12,8 @@
 
     <div class="navbar">
         <div class="container">
-            <a class="logo" href="index.html">PingPongFlow</a>
-            <img src="static/symbol.png" alt="symbol" href="index.html">
+            <a class="logo" href="#">PingPongFlow</a>
+            <img src="static/symbol.png" alt="symbol" href="#">
 
             <nav>
                 <ul class="primary-nav">
